--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -449,6 +449,11 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-no-border">
+                                        <span class="menu-text">With no border</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-selectable-rows">
                                         <span class="menu-text">With selectable rows</span>
                                     </a>
@@ -895,6 +900,55 @@
 
                                             <table id="grid_table_column_chooser" class="table table-bordered word-break"></table>
                                             <div id="grid_pager_column_chooser"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <a href="#" name="jqGrid-with-no-border" class="title-anchor">&nbsp;</a>
+
+                            <div class="code-container">
+                                <div class="row flex-container code-header no-border-top">
+                                    <div class="col-xs-8 module-description">
+                                        <h4><strong>jqGrid with no border</strong></h4>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jq_with_no_border" aria-expanded="false" aria-controls="jq_with_no_border"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
+                                    </div>
+                                </div>
+                                <div class="collapse code-example"  id="jq_with_no_border">
+                                    <!-- Nav tabs -->
+                                    <ul class="nav nav-tabs code-example" role="tablist">
+                                        <li role="presentation" class="active"><a href="#jq_with_no_border_html_source" aria-controls="jq_with_no_border_html" role="tab" data-toggle="tab">HTML</a></li>
+                                        <li role="presentation"><a href="#jq_with_no_border_js_source" aria-controls="jq_with_no_border_js" role="tab" data-toggle="tab">JS</a></li>
+                                        <li role="presentation"><a href="#jq_with_no_border_css_source" aria-controls="jq_with_no_border_css" role="tab" data-toggle="tab">CSS</a></li>
+                                    </ul>
+
+                                    <!-- Tab panes -->
+                                    <div class="tab-content code-example">
+                                        <div role="tabpanel" class="tab-pane html-source active" id="jq_with_no_border_html_source">
+                                            <pre class="language-html"><code class="language-html" data-showcase="code"></code></pre>
+                                        </div>
+                                        <div role="tabpanel" class="tab-pane js-source" id="jq_with_no_border_js_source">
+                                            <pre class="language-html"><code class="language-html" data-showcase="code"></code></pre>
+                                        </div>
+                                        <div role="tabpanel" class="tab-pane css-source" id="jq_with_no_border_css_source">
+                                            <pre class="language-html"><code class="language-html" data-showcase="code"></code></pre>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqgrid_with_no_border_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
+                                            <div class="pad-top-20 pad-btm-20 clearfix">
+                                                <button type="button" id="grid_table_no_border_button" class="btn btn-primary pull-right">
+                                                    Select columns <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                                </button>
+                                            </div>
+
+                                            <table id="grid_table_no_border" class="table table-bordered word-break"></table>
+                                            <div id="grid_pager_no_border"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -1447,7 +1501,7 @@
                 { label: 'Nickname', name: 'codename' },
                 { label: 'Spiritual Animal', name: 'spirit_animal' }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingParameters).init();
@@ -1467,7 +1521,7 @@
                 {label: 'Last Name', name: 'lastname'},
                 {label: 'Username', name: 'username'}
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingParameters).init();
@@ -1509,7 +1563,7 @@
                 { label: 'Nickname', name: 'codename' },
                 { label: 'Spiritual Animal', name: 'spirit_animal' }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingParametersSticky).init();
@@ -1532,6 +1586,39 @@
                 saveBtnLabel: 'Done',
                 cancelBtnLabel: 'Cancel',
                 actionButton: '#grid_table_column_chooser_button'
+            },
+            colModel: [
+                { label: 'First Name', name: 'firstname', key: true, width: "100" },
+                { label: 'Last Name', name: 'lastname' },
+                { label: 'Username', name: 'username' },
+                { label: 'Hobby', name: 'jobtype' },
+                { label: 'Nickname', name: 'codename' },
+                { label: 'Spiritual Animal', name: 'spirit_animal' }
+            ],
+            multiselect: true,
+            styleUI: 'fontAwesome'
+        };
+
+        var photonGrid = new PhotonJqGrid(listingParametersWithColumnChooser);
+        photonGrid.init();
+        $(photonGrid.grid).jqGrid('columnChooser');
+    });
+</script>
+
+<script type="text/javascript" data-dependency-name="jqgrid_with_no_border_init">
+    $(document).ready(function () {
+        var listingParametersWithColumnChooser = {
+            table: '#grid_table_no_border',
+            pager: '#grid_pager_no_border',
+            datatype: 'jsonstring',
+            caption: 'Listing caption',
+            datastr: getListingDummyData(),
+            useCustomColumnChooser: true,
+            columnChooserOptions: {
+                selectAllCheckboxLabel: 'Select all',
+                saveBtnLabel: 'Done',
+                cancelBtnLabel: 'Cancel',
+                actionButton: '#grid_table_no_border_button'
             },
             colModel: [
                 { label: 'First Name', name: 'firstname', key: true, width: "100" },
@@ -1568,7 +1655,7 @@
                 { label: 'Spiritual Animal', name: 'spirit_animal' }
             ],
             multiselect: true,
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingParametersWithSelectableRows).init();
@@ -1763,8 +1850,10 @@
                 //remove border
                 $this = $(this);
                 $this.find('tr').find('td:visible:last').css({'border-right': '0'});
-                //comment next line if you use skin with no border
-                //$this.closest('.ui-jqgrid-view').find('tr').find('th:visible:last').css({'border-right': '0'});
+                
+                //comment next line if you use skin with no border - styleUI : 'fontAwesomeNoBorder'
+                $this.closest('.ui-jqgrid-view').find('tr').find('th:visible:last').css({'border-right': '0'});
+                
                 $this.find('.treeclick').on('click', function () {
                     $this.find('tr').find('td:visible:last').css({'border-right': '0'});
                 })
@@ -1784,7 +1873,7 @@
             treedatatype: 'json',
             ExpandColumn: 'firstname',
             ExpandColClick : true,
-            styleUI : 'fontAwesomeNoBorder'
+            styleUI : 'fontAwesome'
         });
     });
 </script>
@@ -1814,7 +1903,7 @@
             height: 'auto',
             rowNum: 10,
             subGrid: true,
-            styleUI : 'fontAwesomeNoBorder',
+            styleUI : 'fontAwesome',
             loadComplete: function(){
                 //use this for the skin with no border
                 $this = $(this);
@@ -1833,7 +1922,7 @@
                 jQuery("#"+subgrid_table_id).jqGrid({
                     datatype: "jsonstring",
                     datastr: getListingDummyData(),
-                    styleUI : 'fontAwesomeNoBorder',
+                    styleUI : 'fontAwesome',
                     colModel: [
                         { name: 'id',           index: 'id', hidden: true, width: "20" },
                         { label: 'First Name', name: 'firstname',    index: 'firstname', key: true, width: "100" },
@@ -1882,7 +1971,7 @@
                     }
                 }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingParameters).init();
@@ -2054,7 +2143,7 @@
                 {name: 'products', index: 'products', width: 2, sorttype: "text"},
                 {name: 'actions', index: 'actions', width: 2, sortable: false, formatter: PhotonDataFormatter.actionsButtons }
             ],
-            styleUI: 'fontAwesomeNoBorder',
+            styleUI: 'fontAwesome',
             gridComplete: function() {
                 addMoreActions('#grid_table_with_actions');
                 $('#grid_table_with_actions .label-with-tooltip').tooltip();
@@ -2097,7 +2186,7 @@
                 {name: 'products', index: 'products', width: 2, sorttype: "text"},
                 {name: 'actions', index: 'actions', width: 2, sortable: false}
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         new PhotonJqGrid(listingWithNoDataParameters).init();
@@ -2132,7 +2221,7 @@
                 {name: 'userEmail', index: 'userEmail', sortable: false, width: 3, formatter: PhotonDataFormatter.userEmail },
                 {name: 'country', index: 'country', sortable: false, width: 1, formatter: PhotonDataFormatter.country }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         function getListingWithFormatterDummyData() {
@@ -2224,7 +2313,7 @@
                 {name: 'dateTime', index: 'dateTime', sortable: false, width: 1, formatter: PhotonDataFormatter.dateTime },
                 {name: 'status', index: 'status', sortable: false, width: 1, formatter: PhotonDataFormatter.labelAndTooltip }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         function getListingWithFormatter2DummyData() {
@@ -2323,7 +2412,7 @@
                 {name: 'addedBy', index: 'time', sortable: false, width: 2, formatter: PhotonDataFormatter.userEmail },
                 {name: 'actions', index: 'actions', width: 2, sortable: false, formatter: PhotonDataFormatter.actionsButtons }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         function getListingWithNotRecommendedFormatter() {
@@ -2418,7 +2507,7 @@
                 {name: 'addedBy', index: 'time', sortable: false, width: 2, formatter: PhotonDataFormatter.userEmailNoIcon },
                 {name: 'actions', index: 'actions', width: 2, sortable: false, formatter: PhotonDataFormatter.actionsButtons }
             ],
-            styleUI: 'fontAwesomeNoBorder'
+            styleUI: 'fontAwesome'
         };
 
         function getListingWithRecommendedFormatter() {
