--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -455,6 +455,11 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-no-border">
+                                        <span class="menu-text">With no border</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-selectable-rows">
                                         <span class="menu-text">With selectable rows</span>
                                     </a>
