Feature(Layout): Update sticky header design for jqGrid with no border

--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -464,8 +464,8 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-ierarchical-elements-tree">
-                                        <span class="menu-text">With ierarchical elements (Tree)</span>
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-hierarchical-elements-tree">
+                                        <span class="menu-text">With hierarchical elements (Tree)</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
