--- a/demo/plugin_table_paster.html
+++ b/demo/plugin_table_paster.html
@@ -449,13 +449,18 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-no-border">
+                                        <span class="menu-text">With no border</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-selectable-rows">
                                         <span class="menu-text">With selectable rows</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-ierarchical-elements-tree">
-                                        <span class="menu-text">With ierarchical elements (Tree)</span>
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-hierarchical-elements-tree">
+                                        <span class="menu-text">With hierarchical elements (Tree)</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
