--- a/demo/blank_page.html
+++ b/demo/blank_page.html
@@ -118,7 +118,7 @@
 <div class="main-container" id="main-container">
     <div class="main-container-inner">
         <!-- SIDEBAR:Start -->
-        <div id="sidebar"></div>        <!-- SIDEBAR:End -->
+        <div id="sidebar" class="sidebar"></div>        <!-- SIDEBAR:End -->
         <!-- CONTENT:Start -->
         <div class="main-content">
             <div class="page-content">
@@ -165,7 +165,7 @@
                     {
                         'title': 'Overview',
                         'href': '/emag-apps-ui-kit/demo/index.html#overview',
-                        'keywords': 'abc'
+                        'keywords': ''
                     },
                     {
                         'title': 'Getting started',
