--- a/demo/image_gallery.html
+++ b/demo/image_gallery.html
@@ -116,7 +116,7 @@
             <div class="main-container" id="main-container">
                 <div class="main-container-inner">
                 <!-- SIDEBAR:Start -->
-                <div id="sidebar"></div>                <!-- SIDEBAR:End -->
+                <div id="sidebar" class="sidebar"></div>                <!-- SIDEBAR:End -->
                 <!-- CONTENT:Start -->
                 <div class="main-content">
                     <div class="page-content">
@@ -328,7 +328,7 @@
                     {
                         'title': 'Overview',
                         'href': '/emag-apps-ui-kit/demo/index.html#overview',
-                        'keywords': 'abc'
+                        'keywords': ''
                     },
                     {
                         'title': 'Getting started',
