--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -122,7 +122,7 @@
 <div class="main-container" id="main-container">
     <div class="main-container-inner">
         <!-- SIDEBAR:Start -->
-        <div id="sidebar"></div>        <!-- SIDEBAR:End -->
+        <div id="sidebar" class="sidebar"></div>        <!-- SIDEBAR:End -->
         <!-- CONTENT:Start -->
         <div class="main-content">
             <section class="page-content">
@@ -959,7 +959,7 @@
                     {
                         'title': 'Overview',
                         'href': '/emag-apps-ui-kit/demo/index.html#overview',
-                        'keywords': 'abc'
+                        'keywords': ''
                     },
                     {
                         'title': 'Getting started',
