--- a/demo/plugin_stats.html
+++ b/demo/plugin_stats.html
@@ -123,7 +123,7 @@
             <div class="main-container" id="main-container">
                 <div class="main-container-inner">
                     <!-- SIDEBAR:Start -->
-                    <div id="sidebar"></div>                    <!-- SIDEBAR:End -->
+                    <div id="sidebar" class="sidebar"></div>                    <!-- SIDEBAR:End -->
 
                     <!-- CONTENT:Start -->
                     <div class="main-content">
@@ -395,7 +395,7 @@
                     {
                         'title': 'Overview',
                         'href': '/emag-apps-ui-kit/demo/index.html#overview',
-                        'keywords': 'abc'
+                        'keywords': ''
                     },
                     {
                         'title': 'Getting started',
