--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -4,7 +4,7 @@
     <title>Complex form elements - eMAG Apps UI KIT</title>
 
     <link rel="stylesheet" href="../dist/css/lib/jquery-ui-custom.1.11.4.min.css" data-dependency-name="jquery_ui_css">
-    <link rel="stylesheet" href="../dist/plugins/selectize/selectize-0.12.0.min.css" data-dependency-name="selectize_css">
+    <link rel="stylesheet" href="../dist/plugins/selectize/selectize.min.css" data-dependency-name="selectize_css">
     <link rel="stylesheet" href="../dist/plugins/chosen/jQuery.chosen.min.css" data-dependency-name="chosen_css">
 
     <meta charset="utf-8">
@@ -1145,7 +1145,7 @@
 
 <script src="../dist/plugins/inputlimiter/jQuery.inputlimiter.1.3.1.min.js" data-dependency-name="input_limiter_source"></script>
 
-<script src="../dist/plugins/selectize/selectize-0.12.0.min.js" data-dependency-name="selectize_source"></script>
+<script src="../dist/plugins/selectize/selectize.min.js" data-dependency-name="selectize_source"></script>
 
 <script src="../dist/plugins/chosen/jQuery.chosen.min.js" data-dependency-name="chosen_source"></script>
 <script src="../dist/js/main_script.min.js" data-dependency-name="main_script"></script>
