--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -1520,7 +1520,7 @@
             useCustomColumnChooser: true,
             columnChooserOptions: {
                 selectAllCheckboxLabel: 'Select all',
-                saveBtnLabel: 'Done',
+                saveBtnLabel: 'Apply',
                 cancelBtnLabel: 'Cancel',
                 actionButton: '#grid_table_column_chooser_button'
             },
