Rafactor(Plugins): Create files for backward compatibility

--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -439,7 +439,7 @@
                                             <div class="form-group">
                                                 <label for="testfile" class="btn btn-primary">
                                                     <i class="fa fa-upload"></i>
-                                                    <span>Choose a file to upload</span>
+                                                    <span class="upload-button-filename">Choose a file to upload</span>
                                                     <input type="file" name="testfile" id="testfile" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                 </label>
                                             </div>
@@ -484,7 +484,7 @@
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery">
                                             <div class="form-group">
                                                 <label for="testfile2" class="btn btn-link">
-                                                    <i class="fa fa-upload"></i><span>Choose a file to upload</span>
+                                                    <i class="fa fa-upload"></i><span class="upload-button-filename">Choose a file to upload</span>
                                                     <input type="file" name="testfile2" id="testfile2" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                 </label>
                                             </div>
@@ -533,7 +533,7 @@
                                                     <div class="input-group-btn">
                                                         <label for="testfile3" class="btn btn-default">
                                                             <i class="fa fa-upload"></i>
-                                                            <span>Choose a file</span>
+                                                            <span class="upload-button-filename">Choose a file</span>
                                                             <input type="file" name="testfile3" id="testfile3" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                         </label>
                                                         <button class="btn btn-default" type="button">Upload</button>
