--- a/demo/plugin_datetime.html
+++ b/demo/plugin_datetime.html
@@ -11,7 +11,7 @@
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
 <link rel="icon" type="image/png" href="../favicon.png">
     <!-- PLUGIN: DateTimePicker -->
-    <link rel="stylesheet" href="../dist/plugins/datetimepicker/bootstrap-datetimepicker.4.17.47.min.css" data-dependency-name="datetimepicker_css">
+    <link rel="stylesheet" href="../dist/plugins/datetimepicker/bootstrap-datetimepicker.min.css" data-dependency-name="datetimepicker_css">
     <!-- PLUGIN: DateRangePicker -->
     <link rel="stylesheet" href="../dist/plugins/daterangepicker/daterangepicker.min.css" data-dependency-name="daterangepicker_css">
 
@@ -699,7 +699,7 @@
         <!-- PLUGIN: moment.js -->
         <script src="../dist/plugins/datetimepicker/moment.2.10.6.min.js" data-dependency-name="moment_source"></script>
         <!-- PLUGIN: DateTimePicker -->
-        <script src="../dist/plugins/datetimepicker/bootstrap-datetimepicker.4.17.47.min.js" data-dependency-name="datetimepicker_source"></script>
+        <script src="../dist/plugins/datetimepicker/bootstrap-datetimepicker.min.js" data-dependency-name="datetimepicker_source"></script>
         <script src="../dist/plugins/datetimepicker/locales/bootstrap-datetimepicker.min.en.js" data-dependency-name="datetimepicker_en_source"></script>
         <!-- PLUGIN: DateRangePicker -->
         <script src="../dist/plugins/daterangepicker/daterangepicker.min.js" data-dependency-name="daterangepicker_source"></script>
