Feature(Layout): Added boostrap modals in jqgrid

--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -453,6 +453,10 @@
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-column-chooser'
                     },
                     {
+                        'title': 'jqGrid with no border',
+                        'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-no-border'
+                    },
+                    {
                         'title': 'With selectable rows',
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-selectable-rows'
                     },
