Feature(Layout): Added example for subgrid with no border

--- a/demo/plugin_stats.html
+++ b/demo/plugin_stats.html
@@ -575,6 +575,10 @@
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-subgrid'
                     },
                     {
+                        'title': 'With subgrid and no border',
+                        'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-subgrid-and-no-border'
+                    },
+                    {
                         'title': 'With inline editing',
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-inline-editing'
                     },
