--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -1436,7 +1436,18 @@
             cellsubmit: 'clientArray',
             editurl: 'clientArray',
             styleUI: 'fontAwesomeNoBorder',
-            useCustomConfirmationModal: true
+            useCustomConfirmationModal: true,
+            onPaging:function(jgGridId){
+                var data = $(jgGridId).jqGrid('getGridParam','data');
+                for (var i = 0; i < data.length; i++){
+                    if(data[i].firstname == '' || data[i].lastname == ''){
+                        $(jgGridId).jqGrid('delRowData', i+1);  
+                    }
+                }
+                $(jgGridId).jqGrid('setGridParam', {
+                    "page": $(jgGridId).getGridParam('lastpage')
+                }).trigger("reloadGrid");
+            }
         };
 
         var lastSelection;
@@ -1489,7 +1500,9 @@
             $grid_table_add_new_row_programatically.off('jqGridAfterInsertRow', onJqGridAfterInsertRow);
             var rowBefore = $grid_table_add_new_row_programatically.jqGrid('getGridParam', 'records');
             $grid_table_add_new_row_programatically.find('#jSaveButton_' + rowBefore).trigger('click');
-
+            $grid_table_add_new_row_programatically.on('jqGridAfterInsertRow',function(){
+                    console.log('jqGridAfterInsertRow');
+                })
             if ($('#info_dialog').length == 0) {//if there is no error
                 $grid_table_add_new_row_programatically.trigger("reloadGrid");
                 rowCount = $grid_table_add_new_row_programatically.jqGrid('getGridParam', 'records') + 1
@@ -1519,10 +1532,14 @@
                 });
 
                 $grid_table_add_new_row_programatically.one('photonJqGridAfterRowSave', function (e,rowId){
+                    console.log('save')
                     if (isInAddedRowsList(rowId)) {
                         removeFromAddedRowsList(getIndexOfItem(rowId));
                     }
                 });
+
+                
+                
             }
         });
 
