Feature(Layout): Modified add row script

--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -1448,7 +1448,7 @@
                 }
 
                 if (reload) {
-                    $(jgGridId).trigger("reloadGrid")
+                    $(jgGridId).trigger("reloadGrid");
                     setTimeout(function () {
                         $(jgGridId).jqGrid('setGridParam', {
                             "page": $(jgGridId).getGridParam('lastpage')
