--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -443,6 +443,10 @@
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-hierarchical-elements-tree'
                     },
                     {
+                        'title': 'With hierarchical elements and no border (Tree)',
+                        'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-hierarchical-elements-tree-and-no-border'
+                    },
+                    {
                         'title': 'With subgrid',
                         'href': '/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-subgrid'
                     },
