--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -2753,7 +2753,8 @@
                 {name: 'products', index: 'products', width: 2, sorttype: "text"},
                 {name: 'actions', index: 'actions', width: 2, sortable: false}
             ],
-            styleUI: 'fontAwesome'
+            styleUI: 'fontAwesome',
+            onNoResultsHideHeader: true
         };
 
         new PhotonJqGrid(listingWithNoDataParameters).init();
