Feature(Layout): Added Browsersync to UI KIT

--- a/demo/image_gallery.html
+++ b/demo/image_gallery.html
@@ -35,7 +35,7 @@
 <script> (function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:735784,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1; r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script>
 <!-- End Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
 
-<script src="http://localhost:35729/livereload.js"></script>    </head>
+<script async="" src="http://localhost:3000/browser-sync/browser-sync-client.js"></script>    </head>
         <!--[if lt IE 9]>
 <body class="lt-ie9">
 <![endif]-->
