--- a/demo/plugin_hierarchicalselect.html
+++ b/demo/plugin_hierarchicalselect.html
@@ -33,11 +33,21 @@
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->
 
-<!-- Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
-<script> (function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:735784,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1; r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv='); </script>
+<!-- Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/ -->
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1121902,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 <!-- End Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
 
-<script async="" src="http://localhost:3000/browser-sync/browser-sync-client.js"></script>
+
 </head>
 <!--[if lt IE 9]>
 <body class="lt-ie9">
