Feature(Layout): Added first version of the UI KIT new template.

--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -47,7 +47,7 @@
 
 <!-- End Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
 
-<script async="" src="http://localhost:3000/browser-sync/browser-sync-client.js"></script></head>
+</head>
 <!--[if lt IE 9]>
 <body class="lt-ie9">
 <![endif]-->
@@ -874,7 +874,7 @@
         <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2018 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2019 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
