--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -44,7 +44,7 @@
 
 <!-- End Hotjar Tracking Code for http://emagtechlabs.github.io/emag-apps-ui-kit/demo/ -->
 
-<script async="" src="http://localhost:3000/browser-sync/browser-sync-client.js"></script>        <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
+        <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
         <link rel="stylesheet" href="../dist_bs4/plugins/prism/prism.min.css">
         <link rel="stylesheet" href="../dist_bs4/plugins/magnific/magnific.min.css">
     </head>
@@ -3209,7 +3209,7 @@
                 <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2018 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - 2019 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>                <!-- FOOTER:End -->
